Finished tribute exercise

--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
-    
+    <link rel="stylesheet" href="style.css" />  
   </head>
   <body>
-
+    <a id="Header"></a>
+    <div class="HEADING">
+    <h1>A Tribute to Heath Ledger</h1>
+    <hr>
+    <img src="https://www.looper.com/img/gallery/the-real-reason-heath-ledger-licked-his-lips-so-much-in-the-dark-knight/l-intro-1625617080.jpg" alt="Heath as Joker" height="230px"; width="330px";>
+  </div>
+  <div class="main-section">
+    <h2>Brief Overview</h2>
+    <p>Heath Ledger, byname of Heathcliff Andrew Ledger, (born April 4, 1979, Perth, Austl.—died Jan. 22, 2008, New York, N.Y., U.S.), Australian actor renowned for his moving and intense performances in diverse roles.</p>
+    <p>Ledger was raised in Perth, Austl. He began acting in school productions in junior high and moved to Sydney at age 17 to pursue a career in performance.</p>
+  </div>
+  <a href="#Header">Jump to the top of the page</a>
+  </div>
+  <a href="https://en.wikipedia.org/wiki/Heath_Ledger">Go to Wikipedia!</a>
+  
   </body>
 </html>
